adds enable preview to pom
Signed-off-by: adrian-kong <adrian.k1234567890@gmail.com>